# simple-poetry-python-nix

./: .env-example  .gitignore  LICENSE.md  README.md  flake.nix  pyproject.toml
some_app/: main.py
